[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cost-optimizer-assistant"
version = "1.0.0"
description = "AI Agent API成本优化工具箱 - 缓存、压缩、监控、路由"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Skill工厂牧云野店"}
]
keywords = [
    "cost-optimization",
    "llm",
    "token-optimization",
    "cache",
    "prompt-compression",
    "ai-agent"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/skill-factory/cost-optimizer-assistant"
Documentation = "https://github.com/skill-factory/cost-optimizer-assistant#readme"
Repository = "https://github.com/skill-factory/cost-optimizer-assistant"

[tool.setuptools.packages.find]
where = ["."]
include = ["cost_optimizer*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
